versioned_docs/version-2.0/reference/targets/relocated_files.mdx
---
title: relocated_files
description: Loose files with path manipulation applied.
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Loose files with path manipulation applied.

Allows you to relocate the files at runtime to something more convenient than
their actual paths in your project.

For example, you can relocate `src/resources/project1/data.json` to instead be
`resources/data.json`. Your other target types can then add this target to their
`dependencies` field, rather than using the original `files` target.

To remove a prefix:

```
# Results in `data.json`.
relocated_files(
    file_targets=["src/resources/project1:target"],
    src="src/resources/project1",
    dest="",
)
```

To add a prefix:

```
# Results in `images/logo.svg`.
relocated_files(
    file_targets=["//:logo"],
    src="",
    dest="images",
)
```

To replace a prefix:

```
# Results in `new_prefix/project1/data.json`.
relocated_files(
    file_targets=["src/resources/project1:target"],
    src="src/resources",
    dest="new_prefix",
)
```

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings that you can use to describe a target. For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tags='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target. Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

## `files_targets`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

Addresses to the original `files()` targets that you want to relocate, such as `['//:json_files']`. Every target will be relocated using the same mapping. This means that every target must include the value from the `src` field in their original path.

</Field>

## `src`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The original prefix that you want to replace, such as `src/resources`. You can set this field to `""` to preserve the original path; the value in the `dest` field will then be added to the beginning of this original path.

</Field>

## `dest`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The new prefix that you want to add to the beginning of the path, such as `data`. You can set this field to `""` to avoid adding any new values to the path; the value in the `src` field will then be stripped, rather than replaced.

</Field>

</span>
