versioned_docs/version-2.1/reference/targets/relocated_files.mdx
---
title: relocated_files
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Loose files with path manipulation applied.

Allows you to relocate the files at runtime to something more convenient than
their actual paths in your project.

For example, you can relocate `src/resources/project1/data.json` to instead be
`resources/data.json`. Your other target types can then add this target to their
`dependencies` field, rather than using the original `files` target.

To remove a prefix:

```
# Results in `data.json`.
relocated_files(
    file_targets=["src/resources/project1:target"],
    src="src/resources/project1",
    dest="",
)
```

To add a prefix:

```
# Results in `images/logo.svg`.
relocated_files(
    file_targets=["//:logo"],
    src="",
    dest="images",
)
```

To replace a prefix:

```
# Results in `new_prefix/project1/data.json`.
relocated_files(
    file_targets=["src/resources/project1:target"],
    src="src/resources",
    dest="new_prefix",
)
```

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings that you can use to describe a target. For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tags='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target. Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codefiles_targetscode}
</div>

## `files_targets`

<Field
    type_repr={`Iterable[str]`}
    default_repr={`None`}
>

Addresses to the original `files()` targets that you want to relocate, such as `['//:json_files']`. Every target will be relocated using the same mapping. This means that every target must include the value from the `src` field in their original path.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codesrccode}
</div>

## `src`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The original prefix that you want to replace, such as `src/resources`. You can set this field to `""` to preserve the original path; the value in the `dest` field will then be added to the beginning of this original path.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedestcode}
</div>

## `dest`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The new prefix that you want to add to the beginning of the path, such as `data`. You can set this field to `""` to avoid adding any new values to the path; the value in the `src` field will then be stripped, rather than replaced.

</Field>

</span>
